"""BUILD file for WASM toolchain and extensions"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//wasm/private:wasm_aot_aspect",
        "//wasm/private:wasm_component_new",
        "//wasm/private:wasm_component_wizer",
        "//wasm/private:wasm_component_wizer_library",
        "//wasm/private:wasm_embed_aot",
        "//wasm/private:wasm_precompile",
        "//wasm/private:wasm_run",
        "//wasm/private:wasm_signing",
        "//wasm/private:wasm_validate",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        "//toolchains:wasm_toolchain",
    ],
)
