"""BUILD file for WASM toolchain and extensions"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//wasm/private:ssh_keygen",
        "//wasm/private:wasm_aot_aspect",
        "//wasm/private:wasm_component_new",
        "//wasm/private:wasm_component_wizer",
        "//wasm/private:wasm_component_wizer_library",
        "//wasm/private:wasm_embed_aot",
        "//wasm/private:wasm_optimize",
        "//wasm/private:wasm_precompile",
        "//wasm/private:wasm_run",
        "//wasm/private:wasm_signing",
        "//wasm/private:wasm_validate",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    deps = [
        "//toolchains:wasm_toolchain",
    ],
)

bzl_library(
    name = "language_extensions",
    srcs = ["language_extensions.bzl"],
    deps = [
        "//toolchains:cpp_component_toolchain",
        "//toolchains:jco_toolchain",
        "//toolchains:tinygo_toolchain",
        "//toolchains:wasi_sdk_toolchain",
        "//toolchains:wasm_toolchain",
        "//toolchains:wasmtime_toolchain",
        "//toolchains:wkg_toolchain",
        "//wit:defs",
    ],
)
