"""BUILD file for WIT rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":wit_bindgen",
        ":wit_library",
    ],
)

bzl_library(
    name = "wit_library",
    srcs = ["wit_library.bzl"],
    deps = [
        "//providers",
    ],
)

bzl_library(
    name = "wit_bindgen",
    srcs = ["wit_bindgen.bzl"],
    deps = [
        "//providers",
        "@bazel_skylib//lib:paths",
    ],
)
