"""BUILD file for WIT rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        ":symmetric_wit_bindgen",
        ":wit_bindgen",
        ":wit_library",
    ],
)

bzl_library(
    name = "wit_library",
    srcs = ["wit_library.bzl"],
    deps = [
        "//providers",
    ],
)

bzl_library(
    name = "wit_bindgen",
    srcs = ["wit_bindgen.bzl"],
    deps = [
        "//providers",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "symmetric_wit_bindgen",
    srcs = ["symmetric_wit_bindgen.bzl"],
    deps = [
        "//providers",
    ],
)

bzl_library(
    name = "wit_markdown",
    srcs = ["wit_markdown.bzl"],
    deps = [
        "//providers",
    ],
)
