"""BUILD file for WIT rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//wit/private:symmetric_wit_bindgen",
        "//wit/private:wasi_deps",
        "//wit/private:wit_bindgen",
        "//wit/private:wit_deps_check",
        "//wit/private:wit_library",
        "//wit/private:wit_markdown",
    ],
)
