"""WebAssembly Component RPC (wrpc) rules"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

# Bzl library for wrpc rules
bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//providers",
        "//toolchains:wasm_toolchain",
    ],
)

# Bzl library for transport configuration rules
bzl_library(
    name = "transports",
    srcs = ["transports.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//providers",
    ],
)
