"""Checksum generator tool for automated SHA management"""

load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "checksum_updater",
    srcs = ["src/main.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [
        "@checksum_crates//:anyhow",
        "@checksum_crates//:chrono",
        "@checksum_crates//:clap",
        "@checksum_crates//:futures-util",
        "@checksum_crates//:octocrab",
        "@checksum_crates//:reqwest",
        "@checksum_crates//:serde",
        "@checksum_crates//:serde_json",
        "@checksum_crates//:sha2",
        "@checksum_crates//:tempfile",
        "@checksum_crates//:tokio",
    ],
)

# Alias for easier command line usage
alias(
    name = "update_checksums",
    actual = ":checksum_updater",
)
