"""Test case for AOT embedding functionality"""

load("//wasm:defs.bzl", "wasm_embed_aot", "wasm_extract_aot", "wasm_precompile")

package(default_visibility = ["//visibility:public"])

# Create debug AOT artifacts with debug info (for comparison)
wasm_precompile(
    name = "hello_linux_x64_debug",
    component = "//examples/basic:hello_component",
    debug_info = True,
    optimization_level = "2",
    target_triple = "x86_64-unknown-linux-gnu",
)

wasm_precompile(
    name = "hello_linux_arm64_debug",
    component = "//examples/basic:hello_component",
    debug_info = True,
    optimization_level = "2",
    target_triple = "aarch64-unknown-linux-gnu",
)

wasm_precompile(
    name = "hello_portable_debug",
    component = "//examples/basic:hello_component",
    debug_info = True,
    optimization_level = "2",
    target_triple = "pulley64",
)

# Create production AOT artifacts for embedding (default - no debug info)
wasm_precompile(
    name = "hello_linux_x64",
    component = "//examples/basic:hello_component",
    optimization_level = "2",
    target_triple = "x86_64-unknown-linux-gnu",
)

wasm_precompile(
    name = "hello_linux_arm64",
    component = "//examples/basic:hello_component",
    optimization_level = "2",
    target_triple = "aarch64-unknown-linux-gnu",
)

wasm_precompile(
    name = "hello_portable",
    component = "//examples/basic:hello_component",
    optimization_level = "2",
    target_triple = "pulley64",
)

# Test embedding stripped AOT artifacts (production)
wasm_embed_aot(
    name = "hello_with_embedded_aot",
    aot_artifacts = {
        "linux_x64": ":hello_linux_x64",
        "linux_arm64": ":hello_linux_arm64",
        "portable": ":hello_portable",
    },
    component = "//examples/basic:hello_component",
)

# Test embedding debug AOT artifacts (with debug info)
wasm_embed_aot(
    name = "hello_with_embedded_aot_debug",
    aot_artifacts = {
        "linux_x64": ":hello_linux_x64_debug",
        "linux_arm64": ":hello_linux_arm64_debug",
        "portable": ":hello_portable_debug",
    },
    component = "//examples/basic:hello_component",
)

# Test extraction
wasm_extract_aot(
    name = "extracted_linux_x64",
    component = ":hello_with_embedded_aot",
    target_name = "linux_x64",
)

wasm_extract_aot(
    name = "extracted_portable",
    component = ":hello_with_embedded_aot",
    target_name = "portable",
)
